Add apis for runs management
